<resources>
    <string name="default_address">[默认地址]</string>
    <string name="noaddress_add">您还没有地址，赶快添加吧！</string>
    <string name="local_noaddress_add">商品不支持在该区域销售！</string>
    <string name="coupon_rule">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="add_coupon">添加优惠券</string>
    <string name="input_coupon_number">请输入优惠券编号</string>
    <string name="use_coupon">使用优惠券</string>
    <string name="no_coupon">暂无可用优惠券~</string>
    <string name="instructions">使用说明</string>
    <string name="bind_gift_card">绑定礼金卡</string>
    <string name="consumer_detail">消费明细</string>
    <string name="can_into">还可以输入</string>
    <string name="a_word">个字</string>
    <string name="refunds">\t退货退款</string>
    <string name="only_refund">仅退款</string>
    <string name="choose_change_product">请选择要退换的商品</string>
    <string name="choose_change_prodtcu_reason">请选择退换货原因</string>
    <string name="choose_invoice_title">请选择发票抬头</string>
    <string name="write_organizationname">请填写单位名称</string>
    <string name="choose_invoice_content">请选择发票内容</string>
    <string name="invoice_content">发票内容</string>
    <string name="into_coupon_coed">请输入优惠券号</string>
    <string name="into_gift_card">请输入礼金卡号</string>
    <string name="into_gift_password">请输入礼金卡密码</string>
    <string name="used_gift_card">使用礼金卡</string>
    <string name="add_shipping_address">请添加收货地址</string>
    <string name="into_commission_less_than_money">请输入佣金抵扣金额小于可用金额</string>
    <string name="into_money_surplus">请输入金额，还剩余</string>
    <string name="can_use_can_arrive">，可抵</string>
    <string name="not_integral_can_arrive">0积分可用，可抵0元</string>
    <string name="haven_not_name_authentication">您还没有实名认证</string>
    <string name="no_mail">免邮</string>
    <string name="sea_for_perfect_idcard">您购买了海购商品，\n请完善身份信息用于海关申报</string>
    <string name="single_oreder_noe_moer_2000">单笔订单的金额不能超过2000元，\n请您分开结算</string>
    <string name="my_evaluation">我的评价</string>
    <string name="photos_load_wait">图片正在上传..请稍后...</string>
    <string name="evaluate_isnot_nill">评价内容不能为空</string>
    <string name="evaluate_succeed">评价成功</string>
    <string name="evaluate_rule">评价规则</string>
    <string name="max_add_five_photos">最多添加5张图片</string>
    <string name="wait_pay">等待支付</string>
    <string name="the_deal">交易完成</string>
    <string name="to_evaluate">去评价</string>
    <string name="no_logistics_information">暂无物流信息</string>
    <string name="father_order_number">父单编号:</string>
    <string name="pay_time">付款时间</string>
    <string name="deliver_time">发货时间</string>
    <string name="make_bargain_time">成交时间</string>
    <string name="submitted_review_please_wait">您的申请已提交审核，请耐心等待</string>
    <string name="audit_pass_will_refund">审核已通过，款项将退至原账户</string>
    <string name="order_pay_will_deliver">您的订单已付款，等待卖家发货</string>
    <string name="order_give_out">订单已发出，等待买家收货</string>
    <string name="order_already_cancel">订单已取消</string>
    <string name="submit_order_">"您的订单已提交，请在 "</string>
    <string name="please_pay_will_cancel">内完成支付，超时订单自动取消</string>
    <string name="please_into_keyword">请输入关键词</string>
    <string name="servers_type">服务类型</string>
    <string name="only_refund_">\t仅退款</string>
    <string name="exchange_goods_t">\t换货</string>
    <string name="choose_exchange_product">选择更换商品</string>
    <string name="_return_reason">*退换货原因</string>
    <string name="please_choose_specific_cause">请选择具体原因</string>
    <string name="please_into_sales_reason">请输入退换货说明</string>
    <string name="more_200_character">最多200字</string>
    <string name="_add">+添加</string>
    <string name="if_need_invoice">需要发票</string>
    <string name="invoice_type">发票类型</string>
    <string name="common_invoice">普通发票</string>
    <string name="added_tax_invoice">增值税发票</string>
    <string name="make_out_invoice_way">开票方式</string>
    <string name="paper_invoice">纸质发票</string>
    <string name="electron_invoice">电子发票</string>
    <string name="invoice_title">发票抬头</string>
    <string name="wirte_organization_name">请填写单位名称</string>
    <string name="check_taker_information">收票人信息</string>
    <string name="check_taker_mobile">收票人手机</string>
    <string name="by_mobile_query_for_service_platform">可通过手机号在发票服务平台查询</string>
    <string name="check_taker_mail">收票人邮箱</string>
    <string name="receive_electronic_mail_optional">用来接收电子发票邮件，可选填</string>
    <string name="please_input_gift_card_number">请输入礼金卡号码</string>
    <string name="please_input_gift_card_password">请输入礼金卡密码</string>
    <string name="no_canuser">0张可用</string>
    <string name="dommission_deduction">佣金抵扣</string>
    <string name="please_input_money_no_money_can_use">请输入金额，还剩0.00元可用</string>
    <string name="promotional_offers">促销优惠</string>
    <string name="commission">佣金</string>
    <string name="commission_">佣金:</string>
    <string name="my_commission">我的佣金</string>
    <string name="add_ticket">+添加券</string>
    <string name="anonymous_evaluation">匿名评价</string>
    <string name="submit_evaluation">提交评价</string>
    <string name="_add_gift_card">+添加礼金卡</string>
    <string name="no_canuse_giftcard">暂无可用的礼金卡~</string>
    <string name="invoice_message">发票信息</string>
    <string name="common_invoice_t_paper_capacitor">普通发票\t 纸制</string>
    <string name="real_payment">实付款(含运费):</string>
    <string name="creat_time_">创建时间:</string>
    <string name="pay_time_">付款时间:</string>
    <string name="delivery_time_">发货时间:</string>
    <string name="make_bargain_time_">成交时间:</string>
    <string name="order_state_">订单状态:</string>
    <string name="distributors_">配送商:</string>
    <string name="waybill_number_">运单编号:</string>
    <string name="logistics_tack">物流跟踪</string>
    <string name="please_choose_reason">请选择原因</string>
    <string name="distribution_infomation">配送信息</string>
    <string name="autotrophy_distribution">自营配送</string>
    <string name="buyer_leave_message">买家留言</string>
    <string name="optional_leave_message_to_merchant">选填，给商家留言(60字以内)</string>
    <string name="piece_product_total">件，商品合计</string>
    <string name="input_Additional_comments">请输入追加评论</string>
    <string name="commercial_specification">商品规格</string>
    <string name="please_input_product_evaluate">请输入商品评价(1- 300 字)</string>
    <string name="upload_pictures_more_five">上传图片晒单，最多上传5张</string>
    <string name="real_payment_">实付款:</string>
    <string name="your_opinion_important">您的意见很重要，来评价一下吧~</string>
    <string name="nominal_value">面值:¥0.00</string>
    <string name="money_t_qina">金额:\t¥</string>
    <string name="comprehensive_assessment">综合评价</string>
    <string name="product_description">商品描述</string>
    <string name="service_attitude">服务态度</string>
    <string name="logistics_service">物流服务</string>
    <string name="to_modification">去修改</string>
    <string name="parcel_product">包裹商品</string>
    <string name="donnot_chop_hand_days_empty">不剁手的日子真的很空虚~</string>
    <string name="to_cut_hand">去剁手</string>
    <string name="invoice_notice">发票须知</string>
    <string name="invoice_tip">您尚未提交增值税发票信息，请在订单提交后至个人中心上传企业相关凭证\n(1)公司名称必须为您公司营业执照上的名称。\n(2)税务登记号是您公司《税务登记证》的编号，一般为15位；
        三证合一的公司请填写统一社会信用代码即可，请仔细核对后输入。\n(3)注册地址必须是您公司营业执照上的注册地址，公司电话应填写注册电话。\n(4)开户银行必须是您公司银行开户许可证上的开户银行，银行账号必须是您公司开户许可证上的银行账号。
    \n(5)来伊份根据您输入的信息开具增值税专用发票，如影响认证抵扣，来伊份不会受理重新开具增值税专用发票的要求，请务必认真校对所填开票信息。</string>
    <string name="invoice_rule">1、所有商品发票均由来伊份负责开具，且所有开具的发票均为合法有效。\n
2、顾客在结算过程中可以选择是否开具发票，商家会按照顾客的选择为顾客开具发票。\n
3、所有商品仅按顾客实付现金金额开具发票，不包括抵用券、返利金额、销售折让等金额部分。\n
4、伊点卡、悠点卡、积分方式进行支付，则对于该部分支付金额，顾客仅可选择开具0元发票。\n
5、如需将普通发票换开为增值税专用发票（电子发票不支持换开），则必须退回普通发票原件。</string>
    <string name="hint_taxpayer_code">请填写纳税人识别号</string>
    <string name="hint_receiver_mail">请填写收票人邮箱</string>
    <string name="electronic_info1">电子发票与纸质发票具备同等法律效力，可支持报销入账</string>
    <string name="electronic_info2">本单存在不支持开具电子发票的商品</string>

    <string name="invoice_rule1">说明：\n1.目前发票金额不包含悠点卡、伊点卡、积分支付部分。\n2.来伊份自营商品（含生鲜）可开具电子发票或者纸质发票，且由来伊份负责开具。\n3.如商品由第三方卖家销售，发票内容、开具、寄出由商家决定，请直接联系商家。</string>
</resources>
