<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_evaluation"
            android:textColor="@color/main_title_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_three_dots"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/evaluate_rule"
            android:textColor="@color/main_title_color"
            android:textSize="15sp"
            android:visibility="visible" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_evaluate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="48dp" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp">

        <View style="@style/liner_horizontal" />

        <CheckBox
            android:id="@+id/rb_ishidden"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:background="@drawable/select_radio"
            android:button="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/rb_ishidden"
            android:text="@string/anonymous_evaluation"
            android:textColor="@color/main_title_color" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/theme_color"
            android:gravity="center"
            android:text="@string/submit_evaluation"
            android:textColor="@color/button_text_color"
            android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>
