<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/use_coupon"
            android:textColor="@color/main_title_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text="@string/instructions"
            android:textSize="@dimen/textsize_14sp"
            android:textColor="@color/main_title_color"
            android:visibility="gone"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />
    <RelativeLayout
        android:id="@+id/rl_add"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_add"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ListView
            android:id="@+id/lv_cp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:layout_above="@+id/tv_ok"
            />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/confirm"
            android:textSize="@dimen/textsize_14sp"
            android:textColor="@color/button_text_color"
            android:background="@color/theme_color"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/iv_empty_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coupon_nocoupon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_coupon"
            android:layout_below="@+id/iv_empty_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:textSize="@dimen/textsize_14sp"
            android:textColor="@color/sub_title_color"
            />
    </RelativeLayout>


</LinearLayout>
