<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/gift_card"
            android:textColor="@color/main_title_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text="@string/instructions"
            android:textColor="@color/sub_title_color"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_add"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_add_gift_card"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/iv_no_gift_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/giftcard_no_card"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_no_gift_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/no_canuse_giftcard"
            android:textColor="#666666"
            android:textSize="17sp"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_card_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_yes"
        android:layout_marginTop="12dp"
        android:divider="@color/divider_color"
        android:dividerHeight="10dp"
        android:scrollbars="none"
        >
    </ListView>
</LinearLayout>
