<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/tv_merchant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:textSize="@dimen/textsize_14sp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color"/>

    <com.ody.p2p.views.MyListView
        android:id="@+id/lv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1px"
        android:divider="@color/divider_color"
        android:layout_marginLeft="12dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color"
        android:layout_marginLeft="12dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distribution_infomation"
            android:textSize="13sp"
            android:textColor="@color/main_title_color"
            android:layout_marginLeft="12dp"
            />
        <ImageView
            android:id="@+id/iv_travel_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_next"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            />
        <LinearLayout
            android:id="@+id/ll_transport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tv_delievry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/main_title_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autotrophy_distribution"
                android:layout_marginLeft="25dp"
                android:textSize="13sp"
                android:textColor="@color/main_title_color"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toLeftOf="@+id/iv_travel_icon"
            android:layout_below="@+id/ll_transport"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2016_5_20"
                android:textSize="13sp"
                android:textColor="@color/note_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13:00-17:00"
                android:layout_marginLeft="15dp"
                android:textSize="13sp"
                android:textColor="@color/note_color"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color"
        android:layout_marginLeft="12dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyer_leave_message"
            android:layout_marginLeft="12dp"
            android:textSize="13sp"
            android:textColor="#333333"/>
        <EditText
            android:id="@+id/et_merchant_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="60"
            android:hint="@string/optional_leave_message_to_merchant"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/edittext_hint_color"
            android:textSize="13sp"
            android:background="@null"
            android:textColor="@color/main_title_color"
            android:singleLine="true"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/tv_item_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/theme_color"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_heji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_item_total"
            android:text="@string/piece_product_total"
            android:textColor="@color/main_title_color"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_heji"
            android:textColor="@color/main_title_color"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common"
            android:layout_toLeftOf="@+id/tv_num"
            android:textColor="@color/main_title_color"
            android:textSize="14sp"/>
    </RelativeLayout>
</LinearLayout>